# RealFlight

./: .gitignore  .gitmodules  BUILD_INSTRUCTIONS.md  README.md
scripts/: prepare.sh  start_hover_10Hz.sh  start_hover_50Hz.sh  start_track_moving.sh  start_track_stable.sh  start_traj.sh  start_traj_track.sh
scripts/traj_track/: README.md  start_drone0_traj.sh  start_drone3_track.sh  start_vicon_to_target.sh
src/hover_test/: CMakeLists.txt  README_TFLITE.md  package.xml
src/hover_test/config/: USAGE.md  hoverVer0_policy.tflite  hoverVer1_policy.tflite  hoverVer1_policy_raynor_only.tflite  hoverVer1_policy_stable.tflite  hoverVer2_policy.tflite  hoverVer3_policyVer0.tflite  tflite_model.yaml  tflite_model_50hz.yaml
src/hover_test/include/hover_test/: hover_test_node.hpp  hover_test_node_50hz.hpp  tflite_policy.hpp  tflite_policy_50hz.hpp
src/hover_test/launch/: tflite_neural_control.launch.py  tflite_neural_control_50hz.launch.py  traj_test.launch.py
src/hover_test/src/: hover_test_main.cpp  hover_test_main_50hz.cpp  hover_test_node.cpp  hover_test_node_50hz.cpp
src/offboard_state_machine/: CMakeLists.txt  README.md  package.xml
src/offboard_state_machine/config/: fsm_hover.yaml  fsm_track.yaml  fsm_track_stable.yaml  fsm_traj.yaml
src/offboard_state_machine/include/offboard_state_machine/: offboard_fsm_node.hpp  utils.hpp
src/offboard_state_machine/launch/: multi_drone_fsm_launch.py  multi_drone_goto.launch.py  single_drone_test.launch.py
src/offboard_state_machine/src/: main.cpp  offboard_fsm_node.cpp  offboard_fsm_node_tmp.cpp
src/px4-offboard/: 0611_best_tuned.params  setup.py
src/px4-offboard/launch/: geom_multi.launch.py
src/px4-offboard/px4_offboard/: clock_sync_node.py  geom_multilift.py  get_data.py  offboard_control.py  plot_drone_pos.py
src/px4_tf/: package.xml  setup.cfg  setup.py
src/px4_tf/px4_tf/: tf_convert.py
src/track_test/: CMakeLists.txt  README.md  README_TFLITE.md  package.xml
src/track_test/config/: USAGE.md  target_publisher_params.yaml  tflite_model.yaml  trackVer12_policy.tflite  trackVer12_policyVer2.tflite  trackVer12_policy_stable.tflite  trackVer12_policy_stabler.tflite  trackVer12_policy_stablerer.tflite  trackVer12_policy_stablererVer3.tflite  trackVer8_policy.tflite  track_params.yaml  traj_params.yaml
src/track_test/include/track_test/: target_generator.hpp  target_publisher_node.hpp  tflite_policy.hpp  track_test_node.hpp  vicon_to_target_node.hpp
src/track_test/launch/: target_publisher.launch.py  tflite_neural_control.launch.py  track_test.launch.py  vicon_to_target.launch.py
src/track_test/scripts/: publish_target.py
src/track_test/src/: target_generator.cpp  target_publisher_main.cpp  target_publisher_node.cpp  track_test_main.cpp  track_test_node.cpp  vicon_to_target_main.cpp  vicon_to_target_node.cpp
src/traj_test/: CMakeLists.txt  README.md  README_TFLITE.md  package.xml
src/traj_test/config/: USAGE.md  model_info.txt  tflite_inference_example.cpp  tflite_model.yaml  trackVer10_policy.tflite  trackVer6_policy.tflite  trackVer8_policy_stable.tflite  trackVer8_policy_stabler.tflite  trackVer8_policy_stablerer.tflite  trackVer9_policy.tflite  traj_params.yaml
src/traj_test/include/traj_test/: tflite_policy.hpp  traj_test_node.hpp
src/traj_test/launch/: tflite_neural_control.launch.py  traj_test.launch.py
src/traj_test/src/: traj_test_main.cpp  traj_test_node.cpp
src/vicon_px4_bridge/config/: vicon_px4_params.yaml
src/vicon_px4_bridge/src/: vicon_px4_bridge.cpp
visualize/: .gitignore  README.md  README_RVIZ.md  flight_visualization.rviz  requirements.txt  run_visualize.sh  visualize.py  visualize_rviz.py
