<?xml version="1.0"?>
<package format="3">
  <name>offboard_state_machine</name>
  <version>0.0.1</version>
  <description>Multi-drone PX4 offboard finite-state machine</description>

  <maintainer email="yichao_gao@u.nus.edu">Your Name</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>px4_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
